--- a/doctorloan-api/src/WebUI/DoctorLoan.WebAPI/appsettings.json
+++ b/doctorloan-api/src/WebUI/DoctorLoan.WebAPI/appsettings.json
@@ -1,7 +1,8 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ec2-18-142-136-184.ap-southeast-1.compute.amazonaws.com;Database=doctorloan-uat;User ID=postgres;Password=Doctorloan@2023;port=5432;Include Error Detail=true"
+    //"DefaultConnection": "Server=ec2-18-142-136-184.ap-southeast-1.compute.amazonaws.com;Database=doctorloan-uat;User ID=postgres;Password=Doctorloan@2023;port=5432;Include Error Detail=true"
+    "DefaultConnection": "Server=localhost;Database=doctorloan-dev;User ID=postgres;Password=coder2@;port=5432;"
   },
   "Logging": {
     "LogLevel": {
@@ -22,11 +23,11 @@
   "AllowedHosts": "*",
   "EmailConfiguration": {
     "DisplayName": "DoctorLoan Service",
-    "From": "coder2.dl@doctorloan.vn",
+    "From": "info.dl@doctorloan.vn",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "coder2.dl@doctorloan.vn",
-    "Password": "eimpbezqmayifzys"
+    "Username": "info.dl@doctorloan.vn",
+    "Password": "hmruvgkpudytsryk"
   },
   "SystemConfiguration": {
     "UserCodeLength": 8,
